2004-02-19    <Ahmon Dancy@GOBY>

	* configure/Makefile:  Remove ../*.fasl before building.

	* Makefile:

	(LISPDIR): Changed to 6.2 lisp.

	(clean): Clean the configure subtree too.   Removed the real-clean
	rule. 

	(build-prologue): Always remove fasls before building.  This is
	because the 7.0 that is used to build the configure program will
	generate incompatible fasls for the shared source files.

	* configure/Makefile:

	(LISPDIR):  always use 7.0

	* configure/configform.nil:  Repositioned some controls.  Finished
	up keyboard shortcuts.

2004-02-19    <dancy@CANDY2K>

	* loadem.cl: Removed conditionalizations for command line switches
	for 7.0.

	* main.cl: Conditionalize call to console-control since it is only
	available in 7.0.

	* configure/configure.bil:  Keyboard shortcut changes.

	* configure/configform.cl: New user/host list function: Make the
	title bar and prompt text mention the type of list being added.
	Also, center the main window on the screen when starting up.

	* configure/configuration.txt: Fixed some typos.

2004-02-11    <dancy@CANDY2K>

	* openfile.cl: Use excl::cl-internal-real-time instead of
	get-universal-time to avoid bignums.

	* Makefile: added 'configure' rule to forcibly rebuild the configure program..

	* main.cl:  Call (console-control :close :hide) at the beginning of the mainloop.

	* nfs.cfg.default:  Add built-in user list "root".

	* configure/*: Project converted to 7.0.  Modifications and
	bugfixes suggested by alita.
	
2004-02-10  Ahmon Dancy  <dancy@dancy>

	* configure/configuration.txt: Updated according to alita's
	comments.

2004-02-10    <layer@HOBART>

	* Makefile: quote the LISPDIR passed to configure/Makefile

2004-02-04    <Ahmon Dancy@GOBY>

	* Make configure/Makefile use the same lisp distribution as
	../Makefile.

2004-02-03    <layer@HOBART>

	* Makefile: have `clean' do it in configure/, too

2004-02-03    <dancy@CANDY2K>

	* configure/nfs-server-io.cl: Changed secret function numbers to